feat(transactions): added table and row components for transactions, update swagger api definitions
